--- a/RecipeFinderApp/app/build.gradle
+++ b/RecipeFinderApp/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     implementation 'com.dubsmash.volley:library:2.0.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
 }
