--- a/RecipeFinderApp/app/src/main/AndroidManifest.xml
+++ b/RecipeFinderApp/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.RecipeListActivity"></activity>
+        <activity android:name=".activity.RecipeListActivity" />
+        <activity android:name=".activity.ShowLinkActivity"></activity>
     </application>
 
 </manifest>
