--- a/MyChatApp/app/src/main/AndroidManifest.xml
+++ b/MyChatApp/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         <activity android:name=".activities.LoginActivity" />
         <activity android:name=".activities.CreateAccountActivity" />
         <activity android:name=".activities.DashboardActivity" />
-        <activity android:name=".activities.SettingsActivity"></activity>
+        <activity android:name=".activities.SettingsActivity" />
+        <activity android:name=".activities.StatusActivity"></activity>
     </application>
 
 </manifest>
