--- a/MyChatApp/app/build.gradle
+++ b/MyChatApp/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.1.0'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.4.+'
     implementation 'id.zelory:compressor:2.1.0'
+    implementation 'com.firebaseui:firebase-ui-database:2.1.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
