--- a/MyChatApp/app/src/main/AndroidManifest.xml
+++ b/MyChatApp/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.bruno.mychatapp">
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -23,10 +23,12 @@
         <activity android:name=".activities.CreateAccountActivity" />
         <activity android:name=".activities.DashboardActivity" />
         <activity android:name=".activities.SettingsActivity" />
-        <activity android:name=".activities.StatusActivity"></activity>
-
-        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
-            android:theme="@style/Base.Theme.AppCompat"/>
+        <activity android:name=".activities.StatusActivity" />
+        <activity
+            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat" />
+        <activity android:name=".activities.ProfileActivity" />
+        <activity android:name=".activities.ChatActivity"></activity>
     </application>
 
 </manifest>
