--- a/MyChatApp/app/src/main/AndroidManifest.xml
+++ b/MyChatApp/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
-        <activity android:name=".activities.ProfileActivity" />
+        <activity android:name=".activities.ProfileActivity"
+            android:parentActivityName=".activities.DashboardActivity"/>
         <activity android:name=".activities.ChatActivity"></activity>
     </application>
 
